2003-04-18  Jeff Hobbs  <jeffh@ActiveState.com>

	* win/configure: regen
	* win/configure.in (SHELL): force it to /bin/sh as autoconf 2.5x
	uses /bin/bash, which can fail to find exes in the path (ie: lib).

	* generic/tkCanvBmap.c: s/CreateBitmap/TkcCreateBitmap as Windows
	has a CreateBitmap function already.

	* generic/tkCursor.c: s/GetCursor/TkcGetCursor as Windows has a
	GetCursor func already, which causes compiler warnings.

2003-04-14  Mo DeJong  <mdejong@users.sourceforge.net>

	* win/tkWinMenu.c (TkpInitializeMenuBindings):
	Rename the private menu helper cmd from
	tk::tkWinMenuKey to tk::WinMenuKey.
	[Bug 721514]

2003-04-14  Mo DeJong  <mdejong@users.sourceforge.net>

	* generic/tkBind.c (TkpGetBindingXEvent): Add helper method
	that can be used to query the XEvent* for the currently
	executing binding.
	* generic/tkInt.h: Declare TkpGetBindingXEvent.
	* win/tkWinMenu.c (MenuKeyBindProc, TkWinMenuKeyObjCmd,
	TkpInitializeMenuBindings): Rename MenuKeyBindProc to
	TkWinMenuKeyObjCmd and convert it into a Tcl command
	named tk::tkWinMenuKey. Bind keyboard accelerator
	actions to this Tcl command instead of using a native
	C binding. This makes it possible to extend the
	existing binding with Tcl code and makes the Windows
	version work just like the unix version.
	
2003-04-04  Mo DeJong  <mdejong@users.sourceforge.net>

	* unix/Makefile.in: Subst TCL_LIBS instead of
	DL_LIBS and MATH_LIBS.
	* unix/configure: Regen.
	* unix/configure.in: Remove SC_ENABLE_THREADS
	invocation. Thread support in an extension
	should be automatic when Tcl is compiled
	with thread support. Add AC_DEFINE calls
	to set TCL_THREADS, _REENTRANT, and
	_THREAD_SAFE since this was done in
	SC_ENABLE_THREADS. Remove socket and math
	lib checks since these are already done in
	the Tcl configure script.
	* unix/tcl.m4: Update from Tcl to get
	TCL_LIBS fix. This fixes bug 597847
	which was caused by improper linking.
	* unix/tkConfig.sh.in: Subst TCL_LIBS